--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: npm ci --production=false
+        run: npm ci --ignore-scripts
       - name: Transpile code
         run: npm run build
       - name: Run unit tests
-        run: npm run test
+        run: npm test
