--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release CD
 
 on:
-  push:
+  create:
     tags:
-      - .*(?!(alpha|beta))
+      - *(?!(alpha|beta))
 
 jobs:
   build_publish:
