package.json and tsconfig.json fixed

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "haversine-ts",
   "version": "1.0.0",
   "description": "Typescript minimalistic library with utilities for distance calculation on a sphere surface",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
     "beautify": "prettier . --write --ignore-unknown",
