--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "beautify": "prettier . --write --ignore-unknown",
     "lint": "eslint . --ext .ts --fix --max-warnings=0",
     "test": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.spec.ts'",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
