--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,9 @@ jobs:
         run: npm install --production=true --ignore-scripts
       - name: Build
         run: npm run build
-      - name: Publish to NPM
+      - name: Set NPM environment
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > .npmrc
+      - name: Publish to NPM
         run: npm publish
